:feat: website fully responsive

--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -51,191 +51,197 @@
             Restaurant menu category "" entrées ""
 
         -->
-        <div class="category overall-restaurant-pres-margin">
-          Entrées
-          <div class="category__line overall-restaurant-pres-margin"></div>
-        </div> <!-- /.menu-card-category-div -->
+        <div class="container-d-flex">
+          <div class="menu-category">
+            <div class="category overall-restaurant-pres-margin">
+              Entrées
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-        <!-- Entrée #1 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Ravioles de foie gras</span>
-            <div class="menu-item__subtitle">
-              Accompagnés de leur crême à la truffe
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">25€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Entrée #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Ravioles de foie gras</span>
+                <div class="menu-item__subtitle">
+                  Accompagnés de leur crême à la truffe
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">25€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Entrée #2 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Caviar osciètre</span>
-            <div class="menu-item__subtitle">
-               Sur blini à la farine de blé noir
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">35€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Entrée #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Caviar osciètre</span>
+                <div class="menu-item__subtitle">
+                   Sur blini à la farine de blé noir
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">35€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Entrée #3 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Homard et espuma de langoustine</span>
-            <div class="menu-item__subtitle">
-               Mariée aux zests d'orange
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">20€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Entrée #3 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Homard et espuma de langoustine</span>
+                <div class="menu-item__subtitle">
+                   Mariée aux zests d'orange
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">20€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Entrée #4 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Foie gras de canard cuit entier</span>
-            <div class="menu-item__subtitle">
-               Confiture de figue et pain toasté
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">40€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Entrée #4 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Foie gras de canard cuit entier</span>
+                <div class="menu-item__subtitle">
+                   Confiture de figue et pain toasté
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">40€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- /.menu-category -->
 
-        <!--
+          <div class="menu-category">
+            <!--
 
-              Restaurant menu "" plats ""
+                  Restaurant menu "" plats ""
 
-        -->
-        <div class="category overall-restaurant-pres-margin">
-          Plats
-          <div class="category__line overall-restaurant-pres-margin"></div>
-        </div> <!-- /.menu-card-category-div -->
+            -->
+            <div class="category overall-restaurant-pres-margin">
+              Plats
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-        <!-- Plat #1 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Noix de coquille Saint Jacques</span>
-            <div class="menu-item__subtitle">
-               Sur lit de purée celeri-rave
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">40€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Plat #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Noix de coquille Saint Jacques</span>
+                <div class="menu-item__subtitle">
+                   Sur lit de purée celeri-rave
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">40€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Plat #2 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Langoustine poelée</span>
-            <div class="menu-item__subtitle">
-               Purée de patate douce
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">35€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Plat #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Langoustine poelée</span>
+                <div class="menu-item__subtitle">
+                   Purée de patate douce
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">35€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Plat #3 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Mijoté de queue de boeuf</span>
-            <div class="menu-item__subtitle">
-              Et riz sauvage aux zests de citron
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">44€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Plat #3 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Mijoté de queue de boeuf</span>
+                <div class="menu-item__subtitle">
+                  Et riz sauvage aux zests de citron
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">44€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- /.menu-category -->
+          <div class="menu-category">
+            <!--
 
-        <!--
+                  Restaurant menu "" Desserts ""
 
-              Restaurant menu "" Desserts ""
+            -->
+            <div class="category overall-restaurant-pres-margin">
+              Desserts
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-        -->
-        <div class="category overall-restaurant-pres-margin">
-          Desserts
-          <div class="category__line overall-restaurant-pres-margin"></div>
-        </div> <!-- /.menu-card-category-div -->
+            <!-- Dessert #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Macaron noisette et chocolat</span>
+                <div class="menu-item__subtitle">
+                  Glace au caramel brun et sel de Guérande
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">18€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Dessert #1 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Macaron noisette et chocolat</span>
-            <div class="menu-item__subtitle">
-              Glace au caramel brun et sel de Guérande
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">18€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
+            <!-- Dessert #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Baba au rhum revisité</span>
+                <div class="menu-item__subtitle">
+                  Avec son coulis de citron
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">22€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-        <!-- Dessert #2 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Baba au rhum revisité</span>
-            <div class="menu-item__subtitle">
-              Avec son coulis de citron
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">22€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
-
-        <!-- Dessert #3 -->
-        <article class="menu-item card d-flex">
-          <div class="menu-item__title">
-            <span class="text-medium">Tarte au citron meringuée</span>
-            <div class="menu-item__subtitle">
-              Destructurée
-            </div> <!-- /.subtitle -->
-          </div> <!-- ./__title -->
-          <div class="menu-item__price">
-            <span class="text-medium">23€</span>
-          </div> <!-- /__price -->
-          <div class="menu-item__icon">
-            <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-          </div> <!-- /.__icon -->
-        </article> <!-- /.menu-item -->
-
+            <!-- Dessert #3 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Tarte au citron meringuée</span>
+                <div class="menu-item__subtitle">
+                  Destructurée
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">23€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- /.menu-category -->
+        </div> <!-- /.container-d-flex --> 
         <!--
             Buy button
         -->
