--- a/index.html
+++ b/index.html
@@ -73,128 +73,132 @@
       -->
       <section class="features overall-padding">
         <h2 class="overall-section-titles">Fonctionnement</h2>
-        <!--
-             Item #1
-        -->
-        <div class="item">
-          <p class="item__circle">1</p>
-          <p class="item__description">
-            <i class="item__icon fa-solid fa-mobile-screen"></i>Choisissez un restaurant
-          </p>
-        </div> <!-- /.item -->
-        <!--
-             Item #2
-        -->
-        <div class="item">
-          <p class="item__circle">2</p>
-          <p class="item__description">
-            <i class="item__icon fa-solid fa-list"></i>Composez votre menu
-          </p>
-        </div> <!-- /.item -->
-        <!--
-            Item #3
-        -->
-        <div class="item">
-          <p class="item__circle">3</p>
-          <p class="item__description">
-            <i class="item__icon fa-solid fa-store"></i>Dégustez au restaurants
-          </p>
-        </div> <!-- /.item -->
+        <div class="features-container">
+          <!--
+               Item #1
+          -->
+          <div class="item">
+            <p class="item__circle">1</p>
+            <p class="item__description">
+              <i class="item__icon fa-solid fa-mobile-screen"></i>Choisissez un restaurant
+            </p>
+          </div> <!-- /.item -->
+          <!--
+               Item #2
+          -->
+          <div class="item">
+            <p class="item__circle">2</p>
+            <p class="item__description">
+              <i class="item__icon fa-solid fa-list"></i>Composez votre menu
+            </p>
+          </div> <!-- /.item -->
+          <!--
+              Item #3
+          -->
+          <div class="item">
+            <p class="item__circle">3</p>
+            <p class="item__description">
+              <i class="item__icon fa-solid fa-store"></i>Dégustez au restaurants
+            </p>
+          </div> <!-- /.item -->
+        </div> <!-- /.features-container -->
       </section> <!-- /.features -->
 
-      <section class="restaurants overall-padding">
+      <section class="restaurants">
         <h2 class="overall-section-titles">Restaurants</h2>
-        <!--
+        <div class="restaurants-container">
+          <!--
 
-            """ Restaurants list """ section
+              """ Restaurants list """ section
 
-        -->
-        <!--
-            La palette du gout
-        -->
-        <section class="restaurant">
-          <div class="card card-restaurant">
-            <div class="new">Nouveau</div>
-            <img src="assets/restaurants/la_palette_du_gout.jpg" />
-            <div class="flex">
-              <div>
-                <h3>
-                    <a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">
-                      La palette du gout
+          -->
+          <!--
+              La palette du gout
+          -->
+          <article class="restaurant restaurant-mrg">
+            <div class="card card-restaurant">
+              <div class="new">Nouveau</div>
+              <img src="assets/restaurants/la_palette_du_gout.jpg" />
+              <div class="flex">
+                <div>
+                  <h3>
+                      <a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">
+                        La palette du gout
+                      </a>
+                  </h3>
+                  <p>Ménilmontant</p>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+              </div> <!-- /.flex -->
+            </div>
+          </article> <!-- /.restaurant -->
+          <!--
+              La note enchantée
+          -->
+          <article class="restaurant">
+            <div class="card card-restaurant">
+              <div class="new">Nouveau</div>
+              <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
+              <div class="flex">
+                <div>
+                  <h3>
+                    <a class="link-black no-decoration" href="restaurants/la_note_enchantee.html">
+                      La note enchantée
                     </a>
-                </h3>
-                <p>Ménilmontant</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
-        <!--
-            La note enchantée
-        -->
-        <section class="restaurant">
-          <div class="card card-restaurant">
-            <div class="new">Nouveau</div>
-            <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
-            <div class="flex">
-              <div>
-                <h3>
-                  <a class="link-black no-decoration" href="restaurants/la_note_enchantee.html">
-                    La note enchantée
-                  </a>
-                </h3>
-                <p>Charonne</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div> <!-- /.card -->
-        </section> <!-- /.restaurant -->
-        <!--
-            A la française
-        -->
-        <section class="restaurant">
-          <div class="card card-restaurant">
-            <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
-            <div class="flex">
-              <div>
-                <h3>
-                  <a class="link-black no-decoration" href="restaurants/a_la_francaise.html">
-                    A la française
-                  </a>
-                </h3>
-                <p>Cité Rouge</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
-        <!--
-          Le délice des sens
-        -->
-        <section class="restaurant">
-          <div class="card card-restaurant">
-            <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
-            <div class="flex">
-              <div>
-                <h3>
-                  <a class="link-black no-decoration" href="restaurants/le_delice_des_sens.html">
-                    Le délice des sens
-                  </a>
-                </h3>
-                <p>Folie Méricourt</p>
-              </div>
-              <div>
-                <i class="fa-regular fa-heart"></i>
-              </div>
-            </div> <!-- /.flex -->
-          </div>
-        </section> <!-- /.restaurant -->
+                  </h3>
+                  <p>Charonne</p>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+              </div> <!-- /.flex -->
+            </div> <!-- /.card -->
+          </article> <!-- /.restaurant -->
+          <!--
+              A la française
+          -->
+          <article class="restaurant restaurant-mrg">
+            <div class="card card-restaurant">
+              <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
+              <div class="flex">
+                <div>
+                  <h3>
+                    <a class="link-black no-decoration" href="restaurants/a_la_francaise.html">
+                      A la française
+                    </a>
+                  </h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+              </div> <!-- /.flex -->
+            </div>
+          </article> <!-- /.restaurant -->
+          <!--
+            Le délice des sens
+          -->
+          <article class="restaurant">
+            <div class="card card-restaurant">
+              <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
+              <div class="flex">
+                <div>
+                  <h3>
+                    <a class="link-black no-decoration" href="restaurants/le_delice_des_sens.html">
+                      Le délice des sens
+                    </a>
+                  </h3>
+                  <p>Folie Méricourt</p>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+              </div> <!-- /.flex -->
+            </div>
+          </article> <!-- /.restaurant -->
+        </div> <!-- /.restaurant-container -->
       </section> <!-- /.restaurants -->
     </main>
     <!--
