--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -47,179 +47,186 @@
             <h2 class="menu-card__title">Le délices des sens</h2>
             <i class="menu-card__heart-icon fa-regular fa-heart"></i>
           </div> <!-- ./.menu_conttainer__card-title -->
+          <div class="container-d-flex">
           <!--
 
               Restaurant menu category "" entrées ""
 
           -->
-          <div class="category overall-restaurant-pres-margin">
-            Entrées
-            <div class="category__line overall-restaurant-pres-margin"></div>
-          </div> <!-- /.menu-card-category-div -->
+          <div class="menu-category">
+            <div class="category overall-restaurant-pres-margin">
+              Entrées
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-          <!-- Entrée #1 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Tartare de thon</span>
-              <div class="menu-item__subtitle">
-                  Assaisonné de yuzu
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">20€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Entrée #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Tartare de thon</span>
+                <div class="menu-item__subtitle">
+                    Assaisonné de yuzu
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">20€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Entrée #2 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Bouchée de homard croustillant</span>
-              <div class="menu-item__subtitle">
-                Et sa farandole de petits légumes
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">25€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Entrée #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Bouchée de homard croustillant</span>
+                <div class="menu-item__subtitle">
+                  Et sa farandole de petits légumes
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">25€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Entrée #3 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Velouté de cèpes</span>
-              <div class="menu-item__subtitle">
-                Aux truffes
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">25€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Entrée #3 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Velouté de cèpes</span>
+                <div class="menu-item__subtitle">
+                  Aux truffes
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">25€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- ./menu-category -->
 
-          <!--
+          <div class="menu-category">
+            <!--
 
-                Restaurant menu "" plats ""
+                  Restaurant menu "" plats ""
 
-          -->
-          <div class="category overall-restaurant-pres-margin">
-            Plats
-            <div class="category__line overall-restaurant-pres-margin"></div>
-          </div> <!-- /.menu-card-category-div -->
+            -->
+            <div class="category overall-restaurant-pres-margin">
+              Plats
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-          <!-- Plat #1 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Poulet rôti aux herbes de provence</span>
-              <div class="menu-item__subtitle">
-                Et sa crême de truffe
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">25€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Plat #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Poulet rôti aux herbes de provence</span>
+                <div class="menu-item__subtitle">
+                  Et sa crême de truffe
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">25€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Plat #2 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Langoustine rôtie</span>
-              <div class="menu-item__subtitle">
-                Et ses légumes de saison
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">35€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Plat #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Langoustine rôtie</span>
+                <div class="menu-item__subtitle">
+                  Et ses légumes de saison
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">35€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Plat #3 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Côte de boeuf angus</span>
-              <div class="menu-item__subtitle">
-                Et sa purée de panais
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">35€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Plat #3 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Côte de boeuf angus</span>
+                <div class="menu-item__subtitle">
+                  Et sa purée de panais
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">35€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- /.menu-category -->
 
-          <!--
+          <div class="menu-category">
+            <!--
 
-                Restaurant menu "" desserts ""
+                  Restaurant menu "" desserts ""
 
-          -->
-          <div class="category overall-restaurant-pres-margin">
-            Desserts
-            <div class="category__line overall-restaurant-pres-margin"></div>
-          </div> <!-- /.menu-card-category-div -->
+            -->
+            <div class="category overall-restaurant-pres-margin">
+              Desserts
+              <div class="category__line overall-restaurant-pres-margin"></div>
+            </div> <!-- /.menu-card-category-div -->
 
-          <!-- Dessert #1 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Farandole de desserts</span>
-              <div class="menu-item__subtitle">
-                Du chef
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">18€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Dessert #1 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Farandole de desserts</span>
+                <div class="menu-item__subtitle">
+                  Du chef
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">18€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Dessert #2 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Crême brulée</span>
-              <div class="menu-item__subtitle">
-                Revisitée
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">22€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Dessert #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Crême brulée</span>
+                <div class="menu-item__subtitle">
+                  Revisitée
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">22€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
 
-          <!-- Dessert #2 -->
-          <article class="menu-item card d-flex">
-            <div class="menu-item__title">
-              <span class="text-medium">Tiramisu</span>
-              <div class="menu-item__subtitle">
-                A la noisette
-              </div> <!-- /.subtitle -->
-            </div> <!-- ./__title -->
-            <div class="menu-item__price">
-              <span class="text-medium">23€</span>
-            </div> <!-- /__price -->
-            <div class="menu-item__icon">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!-- /.__icon -->
-          </article> <!-- /.menu-item -->
+            <!-- Dessert #2 -->
+            <article class="menu-item card d-flex">
+              <div class="menu-item__title">
+                <span class="text-medium">Tiramisu</span>
+                <div class="menu-item__subtitle">
+                  A la noisette
+                </div> <!-- /.subtitle -->
+              </div> <!-- ./__title -->
+              <div class="menu-item__price">
+                <span class="text-medium">23€</span>
+              </div> <!-- /__price -->
+              <div class="menu-item__icon">
+                <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+              </div> <!-- /.__icon -->
+            </article> <!-- /.menu-item -->
+          </div> <!-- /.container-d-flex --> 
 
           <!--
               Buy button
