:refactor: pages animations on menus

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -59,53 +59,56 @@
                 <div class="category__line  overall-restaurant-pres-margin"></div>
               </div> <!-- /.menu-card-category-div -->
 
-              <!-- Entrée #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Fricassée d'escargot</span>
-                  <div class="menu-item__subtitle">
-                    Au piment d'espelette
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">25€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+              <div class="menu-list">
 
-              <!-- Entrée #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Foie gras de canard mi-cuit</span>
-                  <div class="menu-item__subtitle">
-                    Et ses copeaux de truffe noire
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">35€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Entrée #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Fricassée d'escargot</span>
+                    <div class="menu-item__subtitle">
+                      Au piment d'espelette
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">25€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Entrée #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Oeuf au plat</span>
-                  <div class="menu-item__subtitle">
-                    Assaisonné à la truffe sur lit de crême
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">20€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Entrée #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Foie gras de canard mi-cuit</span>
+                    <div class="menu-item__subtitle">
+                      Et ses copeaux de truffe noire
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">35€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+
+                <!-- Entrée #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Oeuf au plat</span>
+                    <div class="menu-item__subtitle">
+                      Assaisonné à la truffe sur lit de crême
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">20€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+              </div> <!-- /.menu-list-1 -->
             </div> <!-- /.menu-category -->
 
             <div class="menu-category">
@@ -119,53 +122,55 @@
                 <div class="category__line overall-restaurant-pres-margin"></div>
               </div> <!-- /.menu-card-category-div -->
 
-              <!-- Plat #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Filet de boeuf aux herbes</span>
-                  <div class="menu-item__subtitle">
-                    Accompagné de sa ribambelle de légumes
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">20€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+              <div class="menu-list">
+                <!-- Plat #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Filet de boeuf aux herbes</span>
+                    <div class="menu-item__subtitle">
+                      Accompagné de sa ribambelle de légumes
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">20€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Plat #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Parmentier de queue de boeuf</span>
-                  <div class="menu-item__subtitle">
-                    Accompagné de sa ribambelle de légumes
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">44€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Plat #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Parmentier de queue de boeuf</span>
+                    <div class="menu-item__subtitle">
+                      Accompagné de sa ribambelle de légumes
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">44€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Plat #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Filet de Turbot</span>
-                  <div class="menu-item__subtitle">
-                     Aux agrumes
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">44€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Plat #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Filet de Turbot</span>
+                    <div class="menu-item__subtitle">
+                       Aux agrumes
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">44€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+              </div> <!-- ./menu-list-2 -->
             </div> <!-- /.menu-category -->
 
             <div class="menu-category">
@@ -179,54 +184,56 @@
                 <div class="category__line overall-restaurant-pres-margin"></div>
               </div> <!-- /.menu-card-category-div -->
 
-              <!-- Dessert #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Paris-Brest</span>
-                  <div class="menu-item__subtitle">
-                     Revisité
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">18€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+              <idv class="menu-list">
+                <!-- Dessert #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Paris-Brest</span>
+                    <div class="menu-item__subtitle">
+                       Revisité
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">18€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Dessert #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Macaron au chocolat d'exception</span>
-                  <div class="menu-item__subtitle">
-                     Et glâce à la vanille de Madagascar
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">18€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Dessert #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Macaron au chocolat d'exception</span>
+                    <div class="menu-item__subtitle">
+                       Et glâce à la vanille de Madagascar
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">18€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Dessert #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Mousse au chocolat</span>
-                  <div class="menu-item__subtitle">
-                     Au piment d'espelette et à la truffe noire
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">23€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-            </div> <!-- /.container-d-flex -->
+                <!-- Dessert #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Mousse au chocolat</span>
+                    <div class="menu-item__subtitle">
+                       Au piment d'espelette et à la truffe noire
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">23€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+              </div> <!-- /.container-d-flex -->
+            </div> <!-- / menu-list -->
           </div> <!-- /.menu-category -->
           <!--
               Buy button
