--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -226,8 +226,8 @@
                 <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
               </div> <!-- /.__icon -->
             </article> <!-- /.menu-item -->
-          </div> <!-- /.container-d-flex --> 
-
+           </div> <!-- /.menu-category -->
+         </div> <!-- /.container-d-flex -->
           <!--
               Buy button
           -->
